--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <title>My First Parcel App</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- Это оригинальный из сайта как надо -->
-    <!-- <script type="module" src="app.js"></script> -->
+    <script type="module" src="app.js"></script>
   </head>
   <body>
     <h1>Hello, World!</h1>
     <h2>tttugi;n;ono ;ou</h2>
     <!-- Это так как Репета говорил !! без type="module" и в конце -->
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
   </body>
 </html>
